vxl 1.0.0	- October 2003

	Support for MSVC 7
	Replaced "vil". The old "vil" is now called "vil1". "vil2" has been renamed to "vil".
		See the vil chapter in the vxl book for details.
	vnl_matrix_fixed and vnl_vector_fixed upgraded to be fully space efficient.
	Many hundreds of small bug fixes and improved functionality in the core and contributed libraries.

vxl 1.0 beta2	- September 2002

	CMake is now the default build system.

vxl 1.0 beta1	- November 2000

	The first official vxl beta release.

vxl 0.1 	- February 2000

	The very first version of vxl, written from scratch (using pieces of TargetJr) during an intensive coding week.